infrastructure/configs/storage/longhorn/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
  - name: vlan200-gateway
    namespace: networking
  hostnames:
  - "longhorn.logikdev.fr"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
      weight: 100
